--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,4 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/makeYourTrip?createTableIfNotExits=true
 spring.datasource.username=root
-spring.datasource.password=$ShuklaDurgesh
+spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
-logging.level.root=debug
